databases/pma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: esb
spec:
  selector:
    app: phpmyadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
